Adição de icone

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Visualizar Fonte</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="icon" type="image/png" href="Icone.png"/>
 </head>
 <body>
     <div id="Barra">
