--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Visualizar Fonte</title>
+    <title>Verfon</title>
+    <link rel="icon" type="image/png" href="Icone.png"/>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <link rel="icon" type="image/png" href="Icone.png"/>
 </head>
 <body>
-    <div id="Barra">
-        <div class="Opcao">
-            <h4>Carregar fonte</h4>
+    <div id="Tela">
+        <div id="Barra">
             <input id="EntradaDeArquivo" type="file">
-            <button id="BotaoEntradaDeArquivo">Enviar arquivo</button>
+            <button id="BotaoEntradaDeArquivo">Importar fonte</button>
+            <input id="PaginasDeCaractere" type="number" value="1" min="1">
+            <input id="TamanhoDosCaracteres" type="number" value="44" min="1">
+            <input id="TamanhoDoContorno" type="number" value="0" min="0">
+            <input id="CorDosCaracteres" type="color" value="#000">
+            <input id="CorDeFundo" type="color" value="#fff">
+            <input id="CorDoContorno" type="color" value="#000">
         </div>
-        <div class="Opcao">
-            <h4>Caracteres</h4>
-            <input id="AreaDoTexto"></input>
-        </div>
-        <div class="Opcao">
-            <h4>Paginas de Caractere</h4>
-            <input id="PaginasDeCaractere" type="number" value="1">
-        </div>
-        <div class="Opcao">
-            <h4>Tamanho dos caracteres</h4>
-            <input id="TamanhoDosCaracteres" type="number" value="44">
-        </div>
-        <div class="Opcao">
-            <h4>Tamanho do contorno</h4>
-            <input id="TamanhoDoContorno" type="number" >
-        </div>
-        <div class="Opcao">
-            <h4>Cor dos caracteres</h4>
-            <input id="CorDosCaracteres" type="color">
-        </div>
-        <div class="Opcao">
-            <h4>Cor de fundo</h4>
-            <input id="CorDeFundo" type="color">
-        </div>
-        <div class="Opcao">
-            <h4>Cor do contorno</h4>
-            <input id="CorDoContorno" type="color" >
-        </div>
-    </div>
-    <div id="EspacoDosCaracteres">
-        <p id="Caracteres"></p>
+        <textarea id="Caracteres"></textarea>
     </div>
 </body>
 </html>
