--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!doctype html>
+
+<html lang="pt-br">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vizualizar fontes">
     <title>Verfon</title>
-    <link rel="icon" type="image/png" href="Icone.png"/>
+    <link rel="icon" type="image/svg+xml" href="icone.svg" />
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <div id="Tela">
-        <div id="Barra">
-            <input id="EntradaDeArquivo" type="file">
-            <button id="BotaoEntradaDeArquivo">Importar fonte</button>
+    <div class="barra">
+        <input id="EntradaDeArquivo" type="file" multiple>
+        <button class="barra_opcao" id="BotaoEntradaDeArquivo">Importar fonte</button>
+        <div class="barra_opcao"> 
+            <button class="seta" id="pagina_anterior">◀</button>
             <input id="PaginasDeCaractere" type="number" value="1" min="1">
-            <input id="TamanhoDosCaracteres" type="number" value="44" min="1">
-            <input id="TamanhoDoContorno" type="number" value="0" min="0">
-            <input id="CorDosCaracteres" type="color" value="#000">
-            <input id="CorDeFundo" type="color" value="#fff">
-            <input id="CorDoContorno" type="color" value="#000">
+            <button class="seta" id="proxima_pagina">▶</button>
         </div>
-        <textarea id="Caracteres"></textarea>
+        <div class="barra_opcao"> 
+            <button class="seta" id="tamanho_caracter_menos">◀</button>
+            <input id="TamanhoDosCaracteres" type="number" value="44" min="1">
+            <button class="seta" id="tamanho_caracter_mais">▶</button>
+        </div>
+        <div class="barra_opcao"> 
+            <button class="seta" id="tamanho_contorno_menos">◀</button>
+            <input id="TamanhoDoContorno" type="number" value="0" min="0">
+            <button class="seta" id="tamanho_contorno_mais">▶</button>
+        </div>
+
+        <button id="BotaoCorDosCaracteres" type="color"></button>
+        <input id="CorDosCaracteres" type="color">
+        <button id="BotaoCorDeFundo" type="color"></button>
+        <input id="CorDeFundo" type="color">
+        <button id="BotaoCorDoContorno" type="color"></button>
+        <input id="CorDoContorno" type="color">
+
+        <select class="barra_opcao" id="selecionar_fonte" onchange="alterar_fonte()">
+            <option value="">Fonte padrão</option>
+        </select>
     </div>
+    <textarea id="Caracteres"></textarea>
 </body>
+
 </html>
