--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="pt-br">
   <head>
+    <meta name="description" content="Verfon é uma página para carregar e visualizar caracteres">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
     <meta name="description" content="Vizualizar fontes">
