Mais meta dados

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="pt-br">
   <head>
     <meta name="description" content="Verfon é uma página para carregar e visualizar caracteres">
+    <meta name="keywords" content="carregar caracteres, visualizar caracteres, verfon, fontes">
+    <meta name="author" content="Jopestpe">
+    <meta name="publisher" content="Jopestpe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
     <meta name="description" content="Vizualizar fontes">
