+ Acessibilidade atualiza quando troca as cores da fonte pelo fundo e do fundo pelo contorno + Inserido PWA

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Jopestpe">
     <meta name="publisher" content="Jopestpe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="max-age=31536000">
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable">
     <meta name="description" content="Vizualizar fontes">
     <title>Verfon</title>
     <link rel="icon" type="image/svg+xml" href="icone.svg" />
