--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable">
     <meta name="description" content="Vizualizar fontes">
+    <link rel="manifest" href="manifest.json">
+    <script src="carregar_sw.js"></script> 
     <title>Verfon</title>
     <link rel="icon" type="image/svg+xml" href="icone.svg" />
     <link rel="stylesheet" href="style.css">
