--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Vizualizar fontes">
     <title>Verfon</title>
     <link rel="manifest" href="manifest.json">
+    <script src="carregarSW.js"></script> 
     <link rel="icon" type="image/svg+xml" href="icone.svg" />
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
